# circuit_checker

./: .gitignore  README.md  RULE_FORMAT.md  pyproject.toml  run_tests.py
circuit_checker_ui/: .gitignore  DEMO.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
circuit_checker_ui/api/: __init__.py  main.py  main_with_static.py  models.py
circuit_checker_ui/src/: App.css  App.tsx  index.css
circuit_checker_ui/src/api/: client.ts
circuit_checker_ui/src/components/: BeginnerGuide.tsx  Navigation.tsx  RuleBuilder.tsx  RuleForm.tsx  ValidationResults.tsx  YamlEditor.tsx
rules/: rule_example.yaml
src/circuit_checker/: main.py
src/circuit_checker/checker/: rules.py
src/circuit_checker/parser/: allegro.py
src/circuit_checker/reporter/: html.py
tests/: conftest.py  test_integration.py  test_parser.py  test_reporter.py  test_rules.py  test_value_parsing.py
