[project]
name = "circuit-checker"
version = "1.0.0"
description = "OrCAD Schematic Auto Checker - local netlist validation"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
circuit-checker = "circuit_checker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/circuit_checker"]
